src/test/deca/context/valid/created/sans_objet/condition_while_1.deca
// Description:
//    Condition  while
//
// Resultats:
//    doit passer
//
// Historique:
//    cree le 13/01/2024

{
   boolean  x;
   while (x){
      println("c'est ok");
   }
}
