src/test/deca/context/invalid/created/sans_objet/condition_while.deca
// Description:
//    Condition  while
//
// Resultats:
//    error : line 12 : type is not boolean
//
// Historique:
//    cree le 13/01/2024

{
   int x;
   while (x){
      println("c'est ok");
      x=x+1;
   }
}